fix weird gap

--- a/punchcard-react-ui/src/pages/index.module.css
+++ b/punchcard-react-ui/src/pages/index.module.css
@@ -4,3 +4,8 @@ body {
   margin: 0px;
   height: 100%;
 }
+
+body > * {
+  display: flex;
+  flex-direction: column;
+}
